[package]
name = "irpl"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
time = "0.3.22"
chrono = "0.4.26"
clearscreen = "2.0.1"
easy-repl = { version = ">=0.2.3", git = "https://github.com/jgabaut/easy-repl" }
csurename = { version = "1.3.0", git = "https://github.com/csunibo/csurename" }
regex = "1.8.4"
meval = "0.2.0"
rand = "0.8.5"
clap = "4.3.8"
