[package]
name = "irpl"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
time = "0.3.36"
chrono = "0.4.38"
clearscreen = "2.0.1"
easy-repl = { version = ">=0.2.3", git = "https://github.com/jgabaut/easy-repl" }
csurename = { version = "1.3.0", git = "https://github.com/csunibo/csurename" }
regex = "1.10.4"
meval = "0.2.0"
rand = "0.8.5"
clap = "4.5.4"
